--- a/module2/exercise1.html
+++ b/module2/exercise1.html
@@ -32,15 +32,30 @@
 <script>
 
   // Select all the list items on the page and convert to array
-
+  // const items = document.querySelectorAll('[data-time]')
+  
   // Filter for only the elements that contain the word 'Flexbox'
-
+  // const requiredItems = Array.from(items)
+  //                       .map(item => item.textContent)
+  //                       .filter(item => item.includes('Flexbox'))
+  // console.log(requiredItems)
+  
+  const items = Array.from(document.querySelectorAll('[data-time]'))
+  const filtered = items
+  .filter(item => item.textContent.includes('Flexbox'))
   // map down to a list of time strings
-
+  .map(item => item.dataset.time)
   // map to an array of seconds
-
+  .map(timeCode => {
+    const parts = timeCode.split(':').map(part => parseFloat(part))
+    // console.log(parts)
+    // const seconds = parts.splice(1)
+    // console.log(parts)
+    return parts[0] * 60 + parts[1]
+  })
   // reduce to get total
-
+  .reduce((runningTotal, seconds) => runningTotal + seconds, 0)
+  console.log(filtered)
   // 🔥 This can also be done in a single .reduce(), but we're practicing arrow functions here, so chain them!
 
 </script>
